# minerva-admin

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  install.sh  schema.yml
.github/workflows/: build.yml  release.yml
api-spec/: api.yaml
crates/admin-cli/: Cargo.toml  main.rs
crates/admin-cli/commands/: attributestore.rs  common.rs  diff.rs  dump.rs  initialize.rs  loaddata.rs  mod.rs  relation.rs  schema.rs  trendmaterialization.rs  trendstore.rs  trigger.rs  update.rs
crates/admin-cli/tests/: initialize.rs  load_data.rs
crates/admin-service/: #kpi.rs#  #trendmaterialization.rs#  Cargo.toml  datasource.rs  entityset.rs  entitytype.rs  error.rs  header.rs  kpi.rs  main.rs  serviceerror.rs  trendmaterialization.rs  trendstore.rs  trendviewmaterialization.rs  trigger.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: create_kpi.rs  get_entity_types.rs  initialize.rs  lib.rs  load_data.rs
crates/minerva/: Cargo.toml
crates/minerva/src/: attribute_store.rs  change.rs  database.rs  dependency.rs  entity_set.rs  error.rs  instance.rs  interval.rs  job.rs  lib.rs  loading.rs  meas_value.rs  notification_store.rs  relation.rs  replaceall.py  schema.rs  schema.sql  trend_materialization.rs  trend_store.rs  trigger.rs  virtual_entity.rs
crates/minerva/src/changes/: mod.rs  trend_store.rs
examples/tiny_instance/trend/: hub-kpi_node_15m.yaml  hub_node_15m.yaml
examples/tiny_instance_v1/: cluster_config.yaml
examples/tiny_instance_v1/aggregation/: hub_node_1d.yaml  hub_node_1h.yaml  hub_node_1month.yaml  hub_node_1w.yaml  hub_v-network_15m.yaml  hub_v-network_1d.yaml  hub_v-network_1h.yaml  hub_v-network_1month.yaml  hub_v-network_1w.yaml
examples/tiny_instance_v1/attribute/: node_Site.yaml
examples/tiny_instance_v1/custom/post-init/: 01_report_view.sql
examples/tiny_instance_v1/custom/post-init/entity-aggregation/: hub_v-network_main_15m.sql  hub_v-network_main_1d.sql  hub_v-network_main_1h.sql  hub_v-network_main_1month.sql  hub_v-network_main_1w.sql
examples/tiny_instance_v1/materialization/: hub-kpi_node_15m.yaml  hub_node_main_1d.yaml  hub_node_main_1h.yaml  hub_node_main_1month.yaml  hub_node_main_1w.yaml
examples/tiny_instance_v1/relation/: node->v-network.yaml
examples/tiny_instance_v1/sample-data/: sample.config  sample.csv
examples/tiny_instance_v1/trend/: hub_node_15m.yaml  hub_node_1d.yaml  hub_node_1h.yaml  hub_node_1month.yaml  hub_node_1w.yaml
examples/tiny_instance_v1/trigger/: node-15m-highpowerusage.yaml  node-1d-highpowerusage.yaml  node-1h-highpowerusage.yaml  node-1w-highpowerusage.yaml
examples/tiny_instance_v1/virtual-entity/: v-network.sql
examples/tiny_instance_v2/attribute/: node_Site.yaml
examples/tiny_instance_v2/materialization/: hub-kpi_node_15m.yaml
examples/tiny_instance_v2/notification/: trigger-notification.yaml
examples/tiny_instance_v2/trend/: hub_node_15m.yaml
minerva/: Cargo.toml
minerva/src/: attribute_store.rs  change.rs  instance.rs  lib.rs  trend_materialization.rs  trend_store.rs
packaging/: Dockerfile
src/: error.rs  main.rs
src/minerva/: attribute_store.rs  change.rs  instance.rs  interval.rs  mod.rs  trend_materialization.rs  trend_store.rs
