[package]
name = "minerva-admin"
version = "0.1.0"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = "Minerva administration toolset"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.0"
serde_json = "1.0"
glob = "0.3"
regex = "1.5"