[package]
name = "minerva-admin"
version = "0.1.0"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2018"
description = "Minerva administration toolset"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "crates/admin-cli/main.rs"
name = "minerva-admin"

[[bin]]
path = "crates/admin-service/main.rs"
name = "minerva-service"

[workspace]
members = [
    "crates/minerva",
    "crates/admin-service"
]

[dependencies]
clap = "3.1"
structopt = "0.3"
minerva = { version = "0.1.0", path = "crates/minerva" }
tokio = { version = "1.20", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"
serde_json = "1.0"
glob = "0.3"
regex = "1.5"
term-table = "1.3"
dialoguer = "0.10"
async-trait = "0.1"
actix-web = "4.1"
bb8 = "0.8"
bb8-postgres = "0.8"
