[package]
name = "minerva-admin"
version = "0.1.1"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2021"
description = "Minerva administration toolset"
license = "GPL-3.0-or-later"

[[bin]]
path = "main.rs"
name = "minerva-admin"

[dependencies]
clap = "4.0"
structopt = "0.3"
minerva = { version = "0.1.0", path = "../minerva" }
tokio = { version = "1.20", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.20"
rustls-native-certs = "0.6"
tokio-postgres-rustls = "0.9"
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"
serde_json = "1.0"
glob = "0.3"
regex = "1.5"
dialoguer = "0.10"
async-trait = "0.1"
actix-web = "4.1"
actix-cors = "0.6"
bb8 = "0.8"
bb8-postgres = "0.8"
env_logger = "0.10"
lazy_static = "1.4.0"
term-table = "1.3"
comfy-table = "6.1"