[package]
name = "minerva-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "minerva-service"
path = "main.rs"

[dependencies]
actix-web = "4.1"
actix-cors = "0.6"
utoipa = "2.3"
lazy_static = "1.4.0"
clap = "4.0"
structopt = "0.3"
minerva = { version = "0.2.0", path = "../minerva" }
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
rustls = "0.20"
rustls-native-certs = "0.6"
tokio-postgres-rustls = "0.9"
tokio-stream = "0.1"
postgres-types = { version = "0.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"
serde_json = "1.0"
glob = "0.3"
regex = "1.5"
term-table = "1.3"
dialoguer = "0.10"
async-trait = "0.1"
deadpool-postgres = "0.10"
utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
env_logger = "0.10"
derive_more = "0.99.17"
log = "0.4"

[package.metadata.deb]
section = "admin"
