[package]
name = "minerva"
version = "0.2.0"
authors = ["Alfred Blokland <alfred.blokland@hendrikx-itc.nl>"]
edition = "2021"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
postgres-protocol = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.0"
serde_json = "1.0"
glob = "0.3"
regex = "1.5"
async-trait = "0.1"
